<resources>
    <string name="app_name">FunStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="signup">REGISTER</string>
    <string name="signinTosignup">Don\'t Have an Account ? SIGN UP</string>
    <string name="signupTosignin"> I have an already account, SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="discounted_products">Discounted Products</string>
    <string name="all_products">All Products</string>
    <string name="adult">Adult</string>
    <string name="kid">Kid</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="favoritesUpper">FAVORITES</string>
    <string name="cartUpper">CART</string>
    <string name="payment">PAYMENT INFO</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="my_favorites">My Favorites</string>
    <string name="user_name">User Name</string>
    <string name="log_out">LOG OUT</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address:</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="total_amount">Total Amount:</string>
    <string name="card_name_surname">Name and Surname on the card</string>
    <string name="card_number">Card Number</string>
    <string name="card_date">Ay / Yıl</string>
    <string name="cvc">CVC</string>
    <string name="pay">PAY</string>
    <string name="return_home_page">Continue Shopping</string>
    <string name="result_text">Your order has been accepted !</string>
    <string name="buy">BUY</string>

</resources>